Add little update

--- a/index.html
+++ b/index.html
@@ -339,6 +339,10 @@ router.route('/api/:serviceId').all(
       </ul>
     </section>
     <section>
+      <h3>Client side: Flux & React</h3>
+      <p>Explain circle</p>
+    </section>
+    <section>
       <h3>So Client & Server have been married</h3>
       <p>
         <img class="fragment" style="width: 60%" src="images/married.gif" alt="">
