--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ Hello World!
 // start.js
 import http from 'http';
 
-function handleRequest(request, response) {
+function handleResponse(request, response) {
   response.end(`It Works!! Path Hit: ${request.url}`);
 }
 
@@ -346,7 +346,7 @@ router.route('/api/:serviceId').all(
       <section>
         <h3>Client side & Local dev environment</h3>
         <ul>
-          <li class="fragment"><a href="http://webpack.github.io">Webpack!</a> - compiles node modules so the browser can understand and use them</li>
+          <li class="fragment"><a href="http://webpack.github.io">Webpack</a>! - compiles node modules so the browser can understand and use them</li>
           <li class="fragment">Libraries (D3, React, Lodash), modules, bootstrap - everything is installed via npm</li>
           <li class="fragment">JSX (React's 'html') needs a compile step to be understood by the browser - done by Webpack</li>
           <li class="fragment">SASS is compiled to CSS via node-sass</li>
@@ -375,6 +375,7 @@ router.route('/api/:serviceId').all(
         <p>
           <img class="fragment" style="width: 70%" src="images/flux.png" alt="">
         </p>
+        <p><small>Source: FluxChat talk by Bill Fisher of Facebook [<a href="https://twitter.com/fisherwebdev">@fisherwebdev</a>]</small></p>
       </section>
     </section>
     <section>
